untested working migration from aaxapi

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,11 +27,10 @@
         "skipLibCheck": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true
-
     },
     "include": [
-        "src/**/*",
-        "tests/**/*"
+        "src/**/*.ts",
+        "tests/**/*.ts"
     ],
     "exclude": [
         "dist",
