--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
 	"main": "./dist/index.js",
 	"typings": "./dist/index.d.ts",
 	"scripts": {
-		"dev": "ts-node ./script.ts",
-		"photonate": "prisma2 generate"
+		"dev": "env-cmd -f ./env/dev.env ts-node-dev -r tsconfig-paths/register --no-notify --respawn --transpileOnly ./src",
+		"build": "tsc",
+		"generate:photon": "yarn -s prisma2 generate",
+		"generate:nexus": "ts-node -r tsconfig-paths/register --transpile-only ./src/schema",
+		"postinstall": "yarn -s generate:photon"
 	},
 	"_moduleAliases": {
 		"@constants": "dist/constants/",
@@ -57,7 +60,7 @@
 		"mailgun-nodemailer-transport": "^1.2.1",
 		"module-alias": "^2.2.2",
 		"moment": "^2.24.0",
-		"nexus": "^0.11.7",
+		"nexus": "0.12.0-beta.14",
 		"nexus-prisma": "^0.5.0",
 		"node-cache": "^4.2.1",
 		"node-redsys-api": "^0.0.5",
@@ -112,6 +115,7 @@
 		"ts-jest": "^24.1.0",
 		"ts-node": "8.4.1",
 		"ts-node-dev": "^1.0.0-pre.43",
+		"tsconfig-paths": "^3.9.0",
 		"typescript": "3.6.4"
 	}
 }
