--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
 	"main": "./dist/index.js",
 	"typings": "./dist/index.d.ts",
 	"scripts": {
+		"clear-jest": "jest --clearCache",
+		"test": "env-cmd -f ./env/dev.env jest --watchAll",
 		"dev": "env-cmd -f ./env/dev.env ts-node-dev -r tsconfig-paths/register --no-notify --respawn --transpileOnly ./src",
 		"build": "tsc",
 		"generate:photon": "yarn -s prisma2 generate",
 		"generate:nexus": "ts-node -r tsconfig-paths/register --transpile-only ./src/schema",
+		"generate:codegen": "graphql-codegen --config codegen.yml",
 		"postinstall": "yarn -s generate:photon"
 	},
 	"_moduleAliases": {
@@ -42,6 +45,7 @@
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"bull": "^3.11.0",
+		"bull-arena": "^2.6.4",
 		"connect-redis": "^4.0.3",
 		"cors": "^2.8.5",
 		"env-cmd": "^10.0.1",
@@ -51,8 +55,9 @@
 		"graphql": "^14.5.8",
 		"graphql-middleware": "^4.0.1",
 		"graphql-shield": "^6.1.0",
+		"graphql-voyager": "^1.0.0-rc.28",
 		"graphql-yoga": "^1.18.3",
-		"handlebars": "^4.4.3",
+		"handlebars": "^4.4.4",
 		"http-proxy-middleware": "^0.20.0",
 		"ioredis": "^4.14.1",
 		"jsonwebtoken": "^8.5.1",
@@ -78,8 +83,10 @@
 		"@graphql-codegen/typescript": "^1.8.1",
 		"@graphql-codegen/typescript-document-nodes": "^1.8.1",
 		"@graphql-codegen/typescript-graphql-request": "^1.8.1",
+		"@graphql-codegen/typescript-operations": "^1.8.1",
 		"@types/bcryptjs": "^2.4.2",
 		"@types/bull": "^3.10.3",
+		"@types/bull-arena": "^2.6.0",
 		"@types/connect-redis": "^0.0.11",
 		"@types/express-handlebars": "^0.0.33",
 		"@types/express-session": "^1.15.15",
