--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"main": "./dist/index.js",
 	"typings": "./dist/index.d.ts",
 	"scripts": {
+		"clean": "rm -rf dist && mkdir dist",
 		"clear-jest": "jest --clearCache",
 		"test": "env-cmd -f ./env/dev.env jest --watchAll",
 		"dev": "env-cmd -f ./env/dev.env ts-node-dev -r tsconfig-paths/register --no-notify --respawn --transpileOnly ./src",
