--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
 		"dev": "env-cmd -f ./env/dev.env ts-node-dev -r tsconfig-paths/register --no-notify --respawn --transpileOnly ./src",
 		"build": "tsc",
 		"generate:photon": "yarn -s prisma2 generate",
-		"generate:nexus": "ts-node -r tsconfig-paths/register --transpile-only ./src/schema",
+		"generate:nexus": "env-cmd -f ./env/nexus.env ts-node -r tsconfig-paths/register ./src/schema",
 		"generate:codegen": "graphql-codegen --config codegen.yml",
-		"postinstall": "yarn -s generate:photon"
+		"postinstall": "yarn -s generate:photon && yarn -s generate:nexus",
+		"heroku-postbuild": "npm-run-all generate:*"
 	},
 	"_moduleAliases": {
 		"@constants": "dist/constants/",
@@ -118,6 +119,7 @@
 		"eslint-plugin-prettier": "^3.1.1",
 		"graphql-request": "^1.8.2",
 		"jest": "^24.9.0",
+		"npm-run-all": "^4.1.5",
 		"prettier": "^1.18.2",
 		"prisma2": "2.0.0-preview014.2",
 		"ts-jest": "^24.1.0",
