--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "esModuleInterop": true,
         "moduleResolution": "node",
         "resolveJsonModule": true,
+        "strictNullChecks": true,
         "baseUrl": "./src",
         "paths": {
             "@constants": ["constants/"],
