--- a/package.json
+++ b/package.json
@@ -48,11 +48,20 @@
 		]
 	},
 	"dependencies": {
+		"@tsed/common": "^5.33.3",
+		"@tsed/core": "^5.33.3",
+		"@tsed/di": "^5.33.4",
+		"@tsed/graphql": "^5.33.3",
+		"@tsed/swagger": "^5.33.3",
+		"@tsed/testing": "^5.33.3",
 		"apollo-server-express": "^2.9.7",
 		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.19.0",
 		"bull": "^3.11.0",
 		"bull-arena": "^2.6.4",
+		"compression": "^1.7.4",
 		"connect-redis": "^4.0.3",
+		"cookie-parser": "^1.4.4",
 		"cors": "^2.8.5",
 		"env-cmd": "^10.0.1",
 		"express": "^4.17.1",
@@ -69,6 +78,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"lodash": "^4.17.15",
 		"mailgun-nodemailer-transport": "^1.2.1",
+		"method-override": "^3.0.0",
 		"module-alias": "^2.2.2",
 		"moment": "^2.24.0",
 		"nexus": "0.12.0-rc.2",
@@ -76,7 +86,9 @@
 		"node-cache": "^5.0.1",
 		"node-redsys-api": "^0.0.5",
 		"nodemailer": "^6.3.1",
+		"passport": "^0.4.0",
 		"redis": "^2.8.0",
+		"socket.io": "^2.3.0",
 		"type-cacheable": "^2.0.0",
 		"typescript-rest": "^2.2.2",
 		"uuid": "^3.3.3",
@@ -94,7 +106,9 @@
 		"@types/bcryptjs": "^2.4.2",
 		"@types/bull": "^3.10.5",
 		"@types/bull-arena": "^2.6.0",
+		"@types/compression": "^1.0.1",
 		"@types/connect-redis": "^0.0.11",
+		"@types/express": "^4.17.2",
 		"@types/express-handlebars": "^3.1.0",
 		"@types/express-session": "^1.15.15",
 		"@types/graphql": "^14.5.0",
@@ -103,6 +117,7 @@
 		"@types/jest": "^24.0.21",
 		"@types/jsonwebtoken": "^8.3.5",
 		"@types/lodash": "^4.14.144",
+		"@types/method-override": "^0.0.31",
 		"@types/module-alias": "^2.0.0",
 		"@types/node": "^12.12.3",
 		"@types/node-fetch": "^2.5.2",
@@ -136,6 +151,6 @@
 		"ts-node": "8.4.1",
 		"ts-node-dev": "^1.0.0-pre.43",
 		"tsconfig-paths": "^3.9.0",
-		"typescript": "3.6.4"
+		"typescript": "^3.7.2"
 	}
 }
