--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
 		"passport": "^0.4.0",
 		"redis": "^2.8.0",
 		"socket.io": "^2.3.0",
+		"ts-httpexceptions": "^4.1.0",
 		"type-cacheable": "^2.0.0",
 		"typescript-rest": "^2.2.2",
 		"uuid": "^3.3.3",
