--- a/package.json
+++ b/package.json
@@ -48,19 +48,20 @@
 		]
 	},
 	"dependencies": {
-		"@tsed/common": "^5.33.3",
-		"@tsed/core": "^5.33.3",
+		"@tsed/common": "^5.33.4",
+		"@tsed/core": "^5.33.4",
 		"@tsed/di": "^5.33.4",
-		"@tsed/graphql": "^5.33.3",
-		"@tsed/swagger": "^5.33.3",
-		"@tsed/testing": "^5.33.3",
-		"apollo-server-express": "^2.9.7",
+		"@tsed/graphql": "^5.33.4",
+		"@tsed/swagger": "^5.33.4",
+		"@tsed/testing": "^5.33.4",
+		"apollo-server-express": "^2.9.8",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
-		"bull": "^3.11.0",
+		"bull": "^3.12.0",
 		"bull-arena": "^2.6.4",
 		"compression": "^1.7.4",
 		"connect-redis": "^4.0.3",
+		"consolidate": "^0.15.1",
 		"cookie-parser": "^1.4.4",
 		"cors": "^2.8.5",
 		"env-cmd": "^10.0.1",
@@ -68,21 +69,19 @@
 		"express-handlebars": "^3.1.0",
 		"express-session": "^1.17.0",
 		"graphql": "^14.5.8",
-		"graphql-middleware": "^4.0.1",
-		"graphql-shield": "^7.0.0",
+		"graphql-middleware": "^4.0.2",
+		"graphql-shield": "^7.0.2",
 		"graphql-voyager": "^1.0.0-rc.28",
-		"graphql-yoga": "^1.18.3",
 		"handlebars": "^4.5.1",
 		"http-proxy-middleware": "^0.20.0",
 		"ioredis": "^4.14.1",
 		"jsonwebtoken": "^8.5.1",
-		"lodash": "^4.17.15",
 		"mailgun-nodemailer-transport": "^1.2.1",
 		"method-override": "^3.0.0",
 		"module-alias": "^2.2.2",
 		"moment": "^2.24.0",
-		"nexus": "0.12.0-rc.2",
-		"nexus-prisma": "^0.5.0",
+		"nexus": "0.12.0-rc.4",
+		"nexus-prisma": "^0.5.2",
 		"node-cache": "^5.0.1",
 		"node-redsys-api": "^0.0.5",
 		"nodemailer": "^6.3.1",
@@ -105,22 +104,23 @@
 		"@graphql-codegen/typescript-operations": "^1.8.2",
 		"@jest/test-sequencer": "^24.9.0",
 		"@types/bcryptjs": "^2.4.2",
-		"@types/bull": "^3.10.5",
+		"@types/bull": "^3.10.6",
 		"@types/bull-arena": "^2.6.0",
 		"@types/compression": "^1.0.1",
 		"@types/connect-redis": "^0.0.11",
+		"@types/consolidate": "^0.14.0",
 		"@types/express": "^4.17.2",
 		"@types/express-handlebars": "^3.1.0",
 		"@types/express-session": "^1.15.15",
 		"@types/graphql": "^14.5.0",
 		"@types/http-proxy-middleware": "^0.19.3",
-		"@types/ioredis": "^4.0.18",
-		"@types/jest": "^24.0.21",
+		"@types/ioredis": "^4.0.19",
+		"@types/jest": "^24.0.23",
 		"@types/jsonwebtoken": "^8.3.5",
-		"@types/lodash": "^4.14.144",
+		"@types/lodash": "^4.14.146",
 		"@types/method-override": "^0.0.31",
 		"@types/module-alias": "^2.0.0",
-		"@types/node": "^12.12.3",
+		"@types/node": "^12.12.7",
 		"@types/node-fetch": "^2.5.2",
 		"@types/nodemailer": "^6.2.2",
 		"@types/pg": "^7.11.2",
@@ -129,27 +129,26 @@
 		"@types/validator": "^10.11.3",
 		"@types/ws": "^6.0.3",
 		"@types/yup": "^0.26.24",
-		"@typescript-eslint/eslint-plugin": "^2.6.0",
-		"@typescript-eslint/parser": "^2.6.0",
-		"apollo-server-testing": "^2.9.7",
+		"@typescript-eslint/eslint-plugin": "^2.7.0",
+		"@typescript-eslint/parser": "^2.7.0",
+		"apollo-server-testing": "^2.9.8",
 		"axios": "^0.19.0",
-		"detect-port": "^1.3.0",
 		"eslint": "^6.6.0",
 		"eslint-config-google": "^0.14.0",
 		"eslint-config-prettier": "^6.5.0",
 		"eslint-import-resolver-typescript": "^2.0.0",
-		"eslint-plugin-jest": "^23.0.2",
+		"eslint-plugin-jest": "^23.0.3",
 		"eslint-plugin-json": "^2.0.1",
 		"eslint-plugin-prettier": "^3.1.1",
 		"graphql-request": "^1.8.2",
 		"jest": "^24.9.0",
 		"npm-run-all": "^4.1.5",
 		"pg": "^7.12.1",
-		"prettier": "^1.18.2",
-		"prisma2": "2.0.0-preview015",
+		"prettier": "^1.19.1",
+		"prisma2": "2.0.0-preview016.2",
 		"supertest": "^4.0.2",
 		"ts-jest": "^24.1.0",
-		"ts-node": "8.4.1",
+		"ts-node": "8.5.0",
 		"ts-node-dev": "^1.0.0-pre.43",
 		"tsconfig-paths": "^3.9.0",
 		"typescript": "^3.7.2"
