--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"clean": "rm -rf dist && mkdir dist",
 		"clear-jest": "jest --clearCache",
 		"test": "env-cmd -f ./env/dev.env jest --watchAll",
-		"coverage": "env-cmd -f ./env/dev.env jest --coverage",
+		"coveralls": "env-cmd -f ./env/dev.env jest --coverage && cat ./coverage/lcov.info | coveralls",
 		"dev": "env-cmd -f ./env/dev.env ts-node-dev -r tsconfig-paths/register --no-notify --respawn --transpileOnly ./src",
 		"rawdev": "env-cmd -f ./env/dev.env ts-node -r tsconfig-paths/register ./src",
 		"build": "tsc",
@@ -131,6 +131,7 @@
 		"apollo-server-integration-testing": "^2.3.0",
 		"apollo-server-testing": "^2.9.13",
 		"axios": "^0.19.0",
+		"coveralls": "^3.0.9",
 		"eslint": "^6.7.2",
 		"eslint-config-google": "^0.14.0",
 		"eslint-config-prettier": "^6.7.0",
