--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
 		"prisma:liftsave": "env-cmd -f ./env/dev.env yarn prisma2 lift save",
 		"prisma:liftup": "env-cmd -f ./env/dev.env yarn prisma2 lift up",
 		"generate:photon": "env-cmd -f ./env/dev.env yarn -s prisma2 generate",
+		"outgen:photon": "yarn prisma2 generate",
 		"generate:nexus": "env-cmd -f ./env/nexus.env ts-node --transpile-only -r tsconfig-paths/register ./src/schema",
 		"generate:codegen": "graphql-codegen --config codegen.yml",
 		"generate:templatetypes": "template-typegen src/server/views src/types/generated/templateTypes.ts",
-		"postinstall": "yarn -s generate:photon && yarn -s generate:nexus"
+		"postinstall": "./scripts/genphoton.sh"
 	},
 	"_moduleAliases": {
 		"@constants": "dist/constants/",
