--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 language: node_js
 node_js:
   - '11'
+services:
+  - postgresql
+  - redis-server
+before_script:
+  - psql -c 'create database travis_ci_test; \connect travis_ci_test; create schema aatest' -U postgres
+env:
+  global:
+  - PGPORT=5433
 script:
   - yarn run coveralls
