transfer db & redis to travis services

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ services:
   - postgresql
   - redis-server
 before_script:
-  - psql -c 'create database travis_ci_test; \connect travis_ci_test; create schema aatest' -U postgres
+  - psql -c 'create database travis_ci_test;' -U postgres
 env:
   global:
-  - PGPORT=5433
+  - PGPORT=5432
 script:
   - yarn run coveralls
