--- a/package.json
+++ b/package.json
@@ -31,15 +31,6 @@
 		"generate:docs:html": "env-cmd -f ./env/dev.env typedoc src/ --target ES6 --mode file --theme minimal --out ./docs",
 		"postinstall": "./scripts/genphoton.sh"
 	},
-	"_moduleAliases": {
-		"@constants": "dist/constants/",
-		"@helpers": "dist/helpers/",
-		"@permissions": "dist/permissions/",
-		"@queue": "dist/queue/",
-		"@schema": "dist/schema/",
-		"@server": "dist/server/",
-		"@aatypes": "dist/types/"
-	},
 	"prettier": {
 		"printWidth": 100,
 		"tabWidth": 4,
@@ -65,6 +56,7 @@
 		"express": "^4.17.1",
 		"express-handlebars": "^3.1.0",
 		"express-session": "^1.17.0",
+		"@prisma/sdk": "^0.0.100",
 		"fluture": "^12.0.2",
 		"graphql": "^14.5.8",
 		"graphql-middleware": "^4.0.2",
@@ -91,7 +83,13 @@
 		"typescript-rest": "^2.2.2",
 		"uuid": "^3.3.3",
 		"validator": "^12.1.0",
-		"yup": "^0.27.0"
+		"yup": "^0.27.0",
+		"ts-node": "8.5.4",
+		"ts-node-dev": "^1.0.0-pre.44",
+		"typescript": "^3.7.3",
+		"tsconfig-paths": "^3.9.0",
+		"prisma2": "^2.0.0-preview018.1"
+
 	},
 	"devDependencies": {
 		"@graphql-codegen/cli": "^1.9.1",
@@ -101,7 +99,6 @@
 		"@graphql-codegen/typescript-graphql-request": "^1.9.1",
 		"@graphql-codegen/typescript-operations": "^1.9.1",
 		"@jest/test-sequencer": "^24.9.0",
-		"@prisma/sdk": "^0.0.100",
 		"@types/bcryptjs": "^2.4.2",
 		"@types/bull": "^3.10.6",
 		"@types/bull-arena": "^2.6.0",
@@ -153,16 +150,11 @@
 		"npm-run-all": "^4.1.5",
 		"pg": "^7.14.0",
 		"prettier": "^1.19.1",
-		"prisma2": "^2.0.0-preview018.1",
 		"safe-buffer": "^5.2.0",
 		"supertest": "^4.0.2",
 		"template-typegen": "^0.0.4",
 		"ts-jest": "^24.2.0",
-		"ts-node": "8.5.4",
-		"ts-node-dev": "^1.0.0-pre.44",
-		"tsconfig-paths": "^3.9.0",
 		"typedoc": "^0.15.5",
-		"typedoc-plugin-markdown": "^2.2.14",
-		"typescript": "^3.7.3"
+		"typedoc-plugin-markdown": "^2.2.14"
 	}
 }
