--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
 	},
 	"author": "Enrique Velasco",
 	"license": "MIT",
+	"engines": {
+		"node": ">=13.0.0 <=13.2.0"
+	},
 	"main": "./dist/index.js",
 	"typings": "./dist/index.d.ts",
 	"scripts": {
@@ -18,7 +21,7 @@
 		"cov": "env-cmd -f ./env/dev.env jest --coverage && cat ./coverage/lcov.info | coveralls",
 		"dev": "env-cmd -f ./env/dev.env ts-node-dev -r tsconfig-paths/register --no-notify --respawn --transpileOnly ./src",
 		"rawdev": "env-cmd -f ./env/dev.env ts-node -r tsconfig-paths/register ./src",
-		"build": "tsc",
+		"start": "ts-node -r tsconfig-paths/register ./src",
 		"prisma:dev": "env-cmd -f ./env/dev.env yarn prisma2 dev",
 		"prisma:liftsave": "env-cmd -f ./env/dev.env yarn prisma2 lift save",
 		"prisma:liftup": "env-cmd -f ./env/dev.env yarn prisma2 lift up",
