run with ts-no @production

--- a/package.json
+++ b/package.json
@@ -91,7 +91,32 @@
 		"ts-node-dev": "^1.0.0-pre.44",
 		"typescript": "^3.7.3",
 		"tsconfig-paths": "^3.9.0",
-		"prisma2": "^2.0.0-preview018.1"
+		"prisma2": "^2.0.0-preview018.1",
+		"@types/bcryptjs": "^2.4.2",
+		"@types/bull": "^3.10.6",
+		"@types/bull-arena": "^2.6.0",
+		"@types/compression": "^1.0.1",
+		"@types/connect-redis": "^0.0.13",
+		"@types/express-handlebars": "^3.1.0",
+		"@types/express-session": "^1.15.16",
+		"@types/graphql": "^14.5.0",
+		"@types/http-proxy-middleware": "^0.19.3",
+		"@types/ioredis": "^4.14.1",
+		"@types/jsonwebtoken": "^8.3.5",
+		"@types/keygrip": "^1.0.1",
+		"@types/lodash": "^4.14.149",
+		"@types/method-override": "^0.0.31",
+		"@types/module-alias": "^2.0.0",
+		"@types/node": "^12.12.17",
+		"@types/node-fetch": "^2.5.4",
+		"@types/nodemailer": "^6.2.2",
+		"@types/ramda": "^0.26.38",
+		"@types/type-is": "^1.6.3",
+		"@types/uuid": "^3.4.6",
+		"@types/validator": "^12.0.1",
+		"@types/ws": "^6.0.4",
+		"@types/yup": "^0.26.26"
+
 
 	},
 	"devDependencies": {
@@ -102,34 +127,10 @@
 		"@graphql-codegen/typescript-graphql-request": "^1.9.1",
 		"@graphql-codegen/typescript-operations": "^1.9.1",
 		"@jest/test-sequencer": "^24.9.0",
-		"@types/bcryptjs": "^2.4.2",
-		"@types/bull": "^3.10.6",
-		"@types/bull-arena": "^2.6.0",
-		"@types/compression": "^1.0.1",
-		"@types/connect-redis": "^0.0.13",
-		"@types/express-handlebars": "^3.1.0",
-		"@types/express-session": "^1.15.16",
 		"@types/faker": "^4.1.8",
-		"@types/graphql": "^14.5.0",
-		"@types/http-proxy-middleware": "^0.19.3",
-		"@types/ioredis": "^4.14.1",
 		"@types/jest": "^24.0.23",
-		"@types/jsonwebtoken": "^8.3.5",
-		"@types/keygrip": "^1.0.1",
-		"@types/lodash": "^4.14.149",
-		"@types/method-override": "^0.0.31",
-		"@types/module-alias": "^2.0.0",
-		"@types/node": "^12.12.17",
-		"@types/node-fetch": "^2.5.4",
-		"@types/nodemailer": "^6.2.2",
 		"@types/pg": "^7.11.2",
-		"@types/ramda": "^0.26.38",
 		"@types/supertest": "^2.0.8",
-		"@types/type-is": "^1.6.3",
-		"@types/uuid": "^3.4.6",
-		"@types/validator": "^12.0.1",
-		"@types/ws": "^6.0.4",
-		"@types/yup": "^0.26.26",
 		"@typescript-eslint/eslint-plugin": "^2.11.0",
 		"@typescript-eslint/parser": "^2.11.0",
 		"apollo-server-integration-testing": "^2.3.0",
