fixed lift for deployment

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	"author": "Enrique Velasco",
 	"license": "MIT",
 	"engines": {
-		"node": ">=13.0.0 <=13.2.0"
+		"node": ">=10.0.0 <=13.2.0"
 	},
 	"main": "./dist/index.js",
 	"typings": "./dist/index.d.ts",
@@ -47,8 +47,33 @@
 		]
 	},
 	"dependencies": {
-		"@prisma/photon": "^2.0.0-preview018.1",
-		"apollo-server-express": "^2.9.13",
+		"@prisma/photon": "^2.0.0-preview019",
+		"@prisma/sdk": "^0.0.133",
+		"@types/bcryptjs": "^2.4.2",
+		"@types/bull": "^3.10.6",
+		"@types/bull-arena": "^2.6.0",
+		"@types/compression": "^1.0.1",
+		"@types/connect-redis": "^0.0.13",
+		"@types/express-handlebars": "^3.1.0",
+		"@types/express-session": "^1.15.16",
+		"@types/graphql": "^14.5.0",
+		"@types/http-proxy-middleware": "^0.19.3",
+		"@types/ioredis": "^4.14.3",
+		"@types/jsonwebtoken": "^8.3.6",
+		"@types/keygrip": "^1.0.2",
+		"@types/lodash": "^4.14.149",
+		"@types/method-override": "^0.0.31",
+		"@types/module-alias": "^2.0.0",
+		"@types/node": "^13.1.6",
+		"@types/node-fetch": "^2.5.4",
+		"@types/nodemailer": "^6.4.0",
+		"@types/ramda": "^0.26.39",
+		"@types/type-is": "^1.6.3",
+		"@types/uuid": "^3.4.6",
+		"@types/validator": "^12.0.1",
+		"@types/ws": "^6.0.4",
+		"@types/yup": "^0.26.27",
+		"apollo-server-express": "^2.9.16",
 		"bcryptjs": "^2.4.3",
 		"bull": "^3.12.1",
 		"bull-arena": "^2.6.4",
@@ -59,13 +84,12 @@
 		"express": "^4.17.1",
 		"express-handlebars": "^3.1.0",
 		"express-session": "^1.17.0",
-		"@prisma/sdk": "^0.0.100",
-		"fluture": "^12.0.2",
+		"fluture": "^12.1.0",
 		"graphql": "^14.5.8",
 		"graphql-middleware": "^4.0.2",
-		"graphql-shield": "^7.0.4",
+		"graphql-shield": "^7.0.7",
 		"graphql-voyager": "^1.0.0-rc.28",
-		"handlebars": "^4.5.3",
+		"handlebars": "^4.7.2",
 		"http-proxy-middleware": "^0.20.0",
 		"ioredis": "^4.14.1",
 		"jsonwebtoken": "^8.5.1",
@@ -75,76 +99,50 @@
 		"module-alias": "^2.2.2",
 		"moment": "^2.24.0",
 		"nexus": "0.12.0-rc.5",
-		"nexus-prisma": "^0.6.1",
+		"nexus-prisma": "^0.7.0-next.1",
 		"node-cache": "^5.1.0",
 		"node-redsys-api": "^0.0.5",
 		"nodemailer": "^6.4.1",
+		"prisma2": "^2.0.0-preview019",
 		"ramda": "^0.26.1",
 		"redis": "^2.8.0",
 		"simple-crypto-js": "^2.2.0",
-		"type-cacheable": "^2.0.0",
+		"ts-node": "8.6.2",
+		"ts-node-dev": "^1.0.0-pre.44",
+		"tsconfig-paths": "^3.9.0",
+		"type-cacheable": "^2.1.0",
+		"typescript": "^3.7.4",
 		"typescript-rest": "^2.2.2",
 		"uuid": "^3.3.3",
 		"validator": "^12.1.0",
-		"yup": "^0.27.0",
-		"ts-node": "8.5.4",
-		"ts-node-dev": "^1.0.0-pre.44",
-		"typescript": "^3.7.3",
-		"tsconfig-paths": "^3.9.0",
-		"prisma2": "^2.0.0-preview018.1",
-		"@types/bcryptjs": "^2.4.2",
-		"@types/bull": "^3.10.6",
-		"@types/bull-arena": "^2.6.0",
-		"@types/compression": "^1.0.1",
-		"@types/connect-redis": "^0.0.13",
-		"@types/express-handlebars": "^3.1.0",
-		"@types/express-session": "^1.15.16",
-		"@types/graphql": "^14.5.0",
-		"@types/http-proxy-middleware": "^0.19.3",
-		"@types/ioredis": "^4.14.1",
-		"@types/jsonwebtoken": "^8.3.5",
-		"@types/keygrip": "^1.0.1",
-		"@types/lodash": "^4.14.149",
-		"@types/method-override": "^0.0.31",
-		"@types/module-alias": "^2.0.0",
-		"@types/node": "^12.12.17",
-		"@types/node-fetch": "^2.5.4",
-		"@types/nodemailer": "^6.2.2",
-		"@types/ramda": "^0.26.38",
-		"@types/type-is": "^1.6.3",
-		"@types/uuid": "^3.4.6",
-		"@types/validator": "^12.0.1",
-		"@types/ws": "^6.0.4",
-		"@types/yup": "^0.26.26"
-
-
+		"yup": "^0.28.0"
 	},
 	"devDependencies": {
-		"@graphql-codegen/cli": "^1.9.1",
-		"@graphql-codegen/introspection": "^1.9.1",
-		"@graphql-codegen/typescript": "^1.9.1",
-		"@graphql-codegen/typescript-document-nodes": "^1.9.1",
-		"@graphql-codegen/typescript-graphql-request": "^1.9.1",
-		"@graphql-codegen/typescript-operations": "^1.9.1",
+		"@graphql-codegen/cli": "^1.11.2",
+		"@graphql-codegen/introspection": "^1.11.2",
+		"@graphql-codegen/typescript": "^1.11.2",
+		"@graphql-codegen/typescript-document-nodes": "^1.11.2",
+		"@graphql-codegen/typescript-graphql-request": "^1.11.2",
+		"@graphql-codegen/typescript-operations": "^1.11.2",
 		"@jest/test-sequencer": "^24.9.0",
-		"@types/faker": "^4.1.8",
-		"@types/jest": "^24.0.23",
-		"@types/pg": "^7.11.2",
+		"@types/faker": "^4.1.9",
+		"@types/jest": "^24.0.25",
+		"@types/pg": "^7.14.1",
 		"@types/supertest": "^2.0.8",
-		"@typescript-eslint/eslint-plugin": "^2.11.0",
-		"@typescript-eslint/parser": "^2.11.0",
+		"@typescript-eslint/eslint-plugin": "^2.16.0",
+		"@typescript-eslint/parser": "^2.16.0",
 		"apollo-server-integration-testing": "^2.3.0",
-		"apollo-server-testing": "^2.9.13",
-		"axios": "^0.19.0",
+		"apollo-server-testing": "^2.9.16",
+		"axios": "^0.19.1",
 		"coveralls": "^3.0.9",
-		"eslint": "^6.7.2",
+		"eslint": "^6.8.0",
 		"eslint-config-google": "^0.14.0",
-		"eslint-config-prettier": "^6.7.0",
+		"eslint-config-prettier": "^6.9.0",
 		"eslint-import-resolver-typescript": "^2.0.0",
-		"eslint-plugin-functional": "^1.0.0",
-		"eslint-plugin-jest": "^23.1.1",
+		"eslint-plugin-functional": "^3.0.1",
+		"eslint-plugin-jest": "^23.6.0",
 		"eslint-plugin-json": "^2.0.1",
-		"eslint-plugin-prettier": "^3.1.1",
+		"eslint-plugin-prettier": "^3.1.2",
 		"faker": "^4.1.0",
 		"graphql-request": "^1.8.2",
 		"jest": "^24.9.0",
@@ -152,13 +150,13 @@
 		"mem": "^6.0.1",
 		"node-mocks-http": "^1.8.1",
 		"npm-run-all": "^4.1.5",
-		"pg": "^7.14.0",
+		"pg": "^7.17.1",
 		"prettier": "^1.19.1",
 		"safe-buffer": "^5.2.0",
 		"supertest": "^4.0.2",
-		"template-typegen": "^0.0.4",
-		"ts-jest": "^24.2.0",
-		"typedoc": "^0.15.5",
-		"typedoc-plugin-markdown": "^2.2.14"
+		"template-typegen": "^0.0.5",
+		"ts-jest": "^24.3.0",
+		"typedoc": "^0.16.2",
+		"typedoc-plugin-markdown": "^2.2.16"
 	}
 }
