upgrade nexus@beta14 & start using ts-node-dev

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"cov": "env-cmd -f ./env/dev.env jest --coverage && cat ./coverage/lcov.info | coveralls",
 		"dev": "env-cmd -f ./env/dev.env ts-node-dev -r tsconfig-paths/register --no-notify --respawn --transpileOnly ./src",
 		"rawdev": "env-cmd -f ./env/dev.env ts-node -r tsconfig-paths/register ./src",
-		"start": "ts-node -r tsconfig-paths/register ./src",
+		"start": "ts-node-dev -r tsconfig-paths/register --tree-kill --no-notify --respawn --transpile-only  ./src",
 		"prisma:dev": "env-cmd -f ./env/dev.env yarn prisma2 dev",
 		"prisma:liftsave": "env-cmd -f ./env/dev.env yarn prisma2 lift save",
 		"prisma:liftup": "env-cmd -f ./env/dev.env yarn prisma2 lift up",
@@ -98,7 +98,7 @@
 		"method-override": "^3.0.0",
 		"module-alias": "^2.2.2",
 		"moment": "^2.24.0",
-		"nexus": "0.12.0-rc.5",
+		"nexus": "0.12.0-beta.14",
 		"nexus-prisma": "^0.7.0-next.1",
 		"node-cache": "^5.1.0",
 		"node-redsys-api": "^0.0.5",
