downgraded ts-node & ts-node-dev

--- a/package.json
+++ b/package.json
@@ -107,8 +107,8 @@
 		"ramda": "^0.26.1",
 		"redis": "^2.8.0",
 		"simple-crypto-js": "^2.2.0",
-		"ts-node": "8.6.2",
-		"ts-node-dev": "^1.0.0-pre.44",
+		"ts-node": "8.3.0",
+		"ts-node-dev": "1.0.0-pre.41",
 		"tsconfig-paths": "^3.9.0",
 		"type-cacheable": "^2.1.0",
 		"typescript": "^3.7.4",
